# NDiceMonte

./: .gitignore  README.md  setup.cfg  setup.py
dev/: accuracy.py  boxplot_hit.py  color_box_tutorial.py  cortana_plot.py  critburn_mosaic.py  croverkill.py  d6_basic.py  hist_tutorial.py  quartile_hit.py  six_20s.py
src/n_dice_monte/: __init__.py
src/n_dice_monte/data_tools/: __init__.py  distributions.py
src/n_dice_monte/graphing/: __init__.py  basic_2d.py
src/n_dice_monte/simulation/: __init__.py  dice.py  dice_size.py  sim_table.py
