[metadata]
name = NDiceMonte
version = 0.0a0
author = Sphinx
description = A python package for calculating and graphing various dice statistics for TTRPGs.
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >=3.8
install_requires =
    matplotlib >= 3.10.8
    numpy >= 2.4

[options.packages.find]
